--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,8 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-#theme: minimal
-remote_theme: pages-themes/minimal@v0.2.0
+theme: jekyll-theme-minimal
 
 plugins:
   - jekyll-feed
